<resources>
    <string name="app_name">Cookbook</string>

    <!-- Shared -->
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signup">Sign Up</string>
    <string name="signin">Sign In</string>
    <string name="signout">Sign out</string>

    <!-- Login -->
    <string name="dontHaveAccount">Don\'t have an Account?</string>

    <!-- Register -->
    <string name="alreadyHaveAccount">Already have an Account?</string>
    <string name="createAccount">Create your Account</string>

    <!-- Show Recipie -->
    <string name="noRecipiesText">No recipies yet! Click the + button to create one.</string>
    <string name="instructionsLabel">Instructions:</string>
    <string name="ingredientsLabel">Ingredients:</string>

    <!-- New/Edit Recipie -->
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="link">Link</string>
    <string name="saveRecipie">Save Recipie</string>

    <!-- Menubar -->
    <string name="edit">Edit Recipie</string>
    <string name="delete">Delete Recipie</string>


</resources>
